# heddobureika

./: .dev.vars.example  .env  .gitignore  Caddyfile.dev  Cargo.toml  LICENSE  README.md  Trunk.toml  boot-init.js  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  styles.css  vitest.integration.config.mts  wrangler.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
cli/: Cargo.toml
cli/src/: bot.rs  main.rs
cli/tests/: multiplayer_sync.rs
core/: Cargo.toml  build.rs
core/src/: action.rs  catalog.rs  codec.rs  game.rs  grid.rs  lib.rs  protocol.rs  room.rs  room_id.rs  snapshot.rs  state.rs
core/tests/: room_update.rs
image_pipeline/: Cargo.toml
image_pipeline/src/: lib.rs
puzzles/: catalog.toml  raora-by-noy.avif
scripts/: minify_dist_assets.sh
src/: app_builder.rs  app_core.rs  app_router.rs  app_runtime.rs  boot.rs  boot_runtime.rs  core.rs  idb.rs  input.rs  local_snapshot.rs  main.rs  model.rs  multiplayer_bridge.rs  multiplayer_game_sync.rs  multiplayer_identity.rs  multiplayer_sync.rs  persisted.rs  persisted_store.rs  puzzle_image.rs  renderer.rs  renderer_stub.rs  runtime.rs  svg_app.rs  svg_view.rs  sync_runtime.rs  view_runtime.rs  wgpu_app.rs  wgpu_frame.wgsl  wgpu_piece.wgsl  wgpu_ui.wgsl  yew_app.rs
tests/: shader_browser.rs  shader_validation.rs
tests/integration/: cli-private-upload.test.ts
tests/integration/_helpers/: dev-server.ts  paths.ts
worker/: Cargo.toml
worker/src/: lib.rs
