[package]
name = "heddobureika"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-SA-4.0"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.10"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["DomRect", "Element", "Event", "HtmlImageElement", "HtmlInputElement", "HtmlSelectElement", "InputEvent", "KeyboardEvent", "Storage", "Touch", "TouchEvent", "TouchList", "Window"] }

[profile.release]
opt-level = "z"
# use "thin" if build time becomes painful
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
