[package]
name = "heddobureika"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-SA-4.0"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.10"
js-sys = "0.3"
wgpu = { version = "28", default-features = false, features = ["std", "webgpu", "webgl", "wgsl"] }
bytemuck = { version = "1.24", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "DomRect", "Element", "Event", "HtmlCanvasElement", "HtmlImageElement", "HtmlInputElement", "HtmlSelectElement", "ImageData", "InputEvent", "KeyboardEvent", "Path2d", "Storage", "Touch", "TouchEvent", "TouchList", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
# use "thin" if build time becomes painful
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
debug = 1
debug-assertions = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2
