[package]
name = "heddobureika"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-SA-4.0"

[dependencies]
yew = { version = "0.22", features = ["csr"], optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = { version = "0.11", features = ["futures"] }
js-sys = "0.3"
glyphon = "0.10"
taffy = "0.9"
wgpu = { version = "28", default-features = false, features = ["std", "webgpu", "webgl", "wgsl"] }
bytemuck = { version = "1.24", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rkyv = "0.8.14"
getrandom = { version = "0.2", features = ["js"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"
sha2 = "0.10"
web-sys = { version = "0.3", features = ["BinaryType", "CanvasRenderingContext2d", "CloseEvent", "Document", "DomRect", "Element", "ErrorEvent", "Event", "HtmlCanvasElement", "HtmlImageElement", "HtmlInputElement", "HtmlSelectElement", "IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbOpenDbRequest", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent", "ImageData", "InputEvent", "KeyboardEvent", "MessageEvent", "Path2d", "PointerEvent", "Response", "Storage", "Touch", "TouchEvent", "TouchList", "UrlSearchParams", "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "WebSocket", "WheelEvent", "Window"] }
heddobureika-core = { path = "core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
naga = { version = "28", features = ["wgsl-in", "glsl-out"] }

[features]
default = ["dev-panel-yew"]
dev-panel-yew = ["yew"]

[profile.release]
opt-level = "z"
# use "thin" if build time becomes painful
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
debug = 1
debug-assertions = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2

[workspace]
members = [".", "core", "worker", "cli"]
default-members = ["."]
