[package]
name = "heddobureika-cli"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-SA-4.0"

[dependencies]
heddobureika-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.9"
url = "2"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
mime_guess = "2"

futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
