[package]
name = "heddobureika-worker"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-SA-4.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
heddobureika-core = { path = "../core" }
js-sys = "0.3"
rkyv = "0.8.14"
worker = "0.7.4"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
p256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "avif"] }
imagesize = "0.13.0"
